--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,6 @@ html, body {
     overflow: hidden;
 }
 
-#button-container {
-    z-index: 2;
-    position: absolute;
-    margin: 1rem;
-    display: flex;
-    flex-direction: column;
-}
-
 #viewer-container{
     position: fixed;
     top: 0;
@@ -23,4 +15,19 @@ html, body {
     outline: none;
     width: 100%;
     height: 100%;
+}
+
+.ifcjs-dimension-preview {
+    width: 1rem;
+    height: 1rem;
+    background-color: #FFA50F;
+    border-radius: 1rem;
+    opacity: 0.5;
+}
+
+.ifcjs-dimension-label{
+    background-color: black;
+    color: white;
+    padding: 4px;
+    border-radius: 4px;
 }
