--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,26 @@ html, body {
     overflow: hidden;
 }
 
+input {
+    visibility: collapse;
+}
+
+.disabled {
+    opacity: 50%;
+    pointer-events: none;
+}
+
+.button-container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+}
+
+.button-container button{
+    margin: 0.5rem;
+    padding: 8px;
+}
+
 #viewer-container{
     position: fixed;
     top: 0;
