--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,39 @@ html, body {
     overflow: hidden;
 }
 
-input {
-    visibility: collapse;
-}
-
-.disabled {
-    opacity: 50%;
-    pointer-events: none;
-}
-
-.button-container {
+.table-container {
     position: absolute;
-    display: flex;
-    flex-direction: column;
+    height: 100vh;
+    background-color: white;
+    overflow-y: scroll;
 }
 
-.button-container button{
-    margin: 0.5rem;
+#export{
+    position: absolute;
+    right: 0;
+}
+
+#bim-table{
+    max-width: 30vw;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+}
+
+#bim-table td, #bim-table th{
+    border: 1px solid #ddd;
     padding: 8px;
+}
+
+#bim-table tr:nth-child(even){background-color: #f2f2f2;}
+
+#bim-table tr:hover{background-color: #ddd;}
+
+#bim-table th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
 }
 
 #viewer-container{
